--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "spatie/laravel-permission": "^6.10",
+        "spatie/simple-excel": "^3.7",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
