--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "maatwebsite/excel": "^3.1",
+        "openspout/openspout": "^4.28",
         "spatie/laravel-permission": "^6.10",
         "spatie/simple-excel": "^3.7",
         "yajra/laravel-datatables-oracle": "^10.11"
